--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ sqlalchemy==2.0.20
 igdb-api-v4==0.2.0
 beautifulsoup4==4.12.2
 pandas==2.0.3
+numpy==1.26.4
 requests==2.31.0
 lxml==4.9.3
 qbittorrent-api==2023.7.52
